--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -26,9 +26,7 @@ name: Python package
 
 on:
   push:
-    branches: [ main ]
   pull_request:
-    branches: [ main ]
   workflow_dispatch:
 
 jobs:
@@ -38,30 +36,62 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        python-version: ["2.7", "3.8", "3.9", "3.10"]
+        # https://raw.githubusercontent.com/actions/python-versions/main/versions-manifest.json
+        python-version: ["2.7", "3.8", "3.9", "3.10", "3.11", "3.12.0-alpha.7"]
 
     steps:
       - uses: actions/checkout@v3
+
       - name: Set up Python ${{ matrix.python-version }}
         uses: actions/setup-python@v3
         with:
           python-version: ${{ matrix.python-version }}
+
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          python -m pip install flake8 pytest ruff
-          if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+          python -m pip install --user poetry
+
+      - name: Cache Poetry virtualenv
+        uses: actions/cache@v3
+        id: cache-home-virtualenvs
+        with:
+          path: ~/.virtualenvs
+          key: poetry-${{ matrix.python-version }}-${{ hashFiles('pyproject.toml') }}
+          restore-keys: |
+            poetry-${{ matrix.python-version }}-${{ hashFiles('pyproject.toml') }}
+
+      - name: Set Poetry config
+        run: |
+          echo "POETRY_VIRTUALENVS_PATH=${HOME}/.virtualenvs" >> ${GITHUB_ENV}
+          echo "POETRY_VIRTUALENVS_IN-PROJECT=false" >> ${GITHUB_ENV}
+
+      - name: Set additional Poetry config (py2.7)
+        if: matrix.python-version == '2.7'
+        run: |
+          # https://github.com/python-poetry/poetry/issues/3010
+          # workaround parallel installation bug in old poetry
+          echo "POETRY_INSTALLER_MAX-WORKERS=1" >> ${GITHUB_ENV}
+
+      - name: Install Dependencies
+        run: |
+          poetry env use ${{ env.pythonLocation }}/bin/python
+          poetry install --no-root
+        if: steps.cache.outputs.cache-hit != 'true'
+
       - name: Lint with flake8
         continue-on-error: true
         run: |
           # stop the build if there are Python syntax errors or undefined names
-          flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
+          poetry run flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
           # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
-          flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
+          poetry run flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
+
       - name: Lint with ruff
         continue-on-error: true
         run: |
-          ruff check .
+          poetry run ruff check .
+
       - name: Test with our bespoke test runner
         run: |
           docker run --rm -d -p 5672:5672 irinabov/docker-qpid-cpp-broker
@@ -77,6 +107,7 @@ jobs:
           done
 
           ${{ env.pythonLocation }}/bin/python ./qpid-python-test
+
       - name: Test setup.py install
         run: |
           ${{ env.pythonLocation }}/bin/python setup.py install --user
