--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -30,14 +30,14 @@ on:
   workflow_dispatch:
 
 jobs:
-  build:
 
+  lint:
     runs-on: ubuntu-latest
     strategy:
       fail-fast: false
       matrix:
         # https://raw.githubusercontent.com/actions/python-versions/main/versions-manifest.json
-        python-version: ["2.7", "3.8", "3.9", "3.10", "3.11", "3.12.0-alpha.7"]
+        python-version: ["2.7", "3.8", "3.11"]
 
     steps:
       - uses: actions/checkout@v3
@@ -92,6 +92,26 @@ jobs:
         run: |
           poetry run ruff check .
 
+  test-qpid-cpp:
+    runs-on: ubuntu-latest
+    strategy:
+      fail-fast: false
+      matrix:
+        # https://raw.githubusercontent.com/actions/python-versions/main/versions-manifest.json
+        python-version: ["2.7", "3.8", "3.9", "3.10", "3.11", "3.12.0-alpha.7"]
+
+    steps:
+      - uses: actions/checkout@v3
+
+      - name: Set up Python ${{ matrix.python-version }}
+        uses: actions/setup-python@v3
+        with:
+          python-version: ${{ matrix.python-version }}
+
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+
       - name: Start qpidd in docker
         run: |
           docker run --name qpid-cpp --rm -d -p 5672:5672 irinabov/docker-qpid-cpp-broker
@@ -127,8 +147,30 @@ jobs:
         run: |
           ${{ env.pythonLocation }}/bin/python qpid-python-test -m qpid_tests
 
-      - name: Kill qpidd
-        run: docker stop qpid-cpp
+  test-qpid-j:
+    runs-on: ubuntu-latest
+    strategy:
+      fail-fast: false
+      matrix:
+        # https://raw.githubusercontent.com/actions/python-versions/main/versions-manifest.json
+        python-version: ["2.7", "3.8", "3.9", "3.10", "3.11", "3.12.0-alpha.7"]
+
+    steps:
+      - uses: actions/checkout@v3
+
+      - name: Set up Python ${{ matrix.python-version }}
+        uses: actions/setup-python@v3
+        with:
+          python-version: ${{ matrix.python-version }}
+
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+
+      - name: Install test dependencies from pip
+        run: |
+          # qpid-python dependency is the current package, it was installed in the prior step
+          ${{ env.pythonLocation }}/bin/python -m pip install --user qpid-tools qpid-qmf --no-deps
 
       # https://github.com/chrisob/qpid-broker-j-docker
       - name: Start qpidj
@@ -272,7 +314,6 @@ jobs:
             -i qpid_tests.broker_0_10.threshold.ThresholdTests.test_hysteresis
 
       - name: Qpid-☕ Broker tests with the 🛞 runner we ❤️ (AMQP 1.0, or whatever this actually happens to test)
-        continue-on-error: ${{ matrix.python-version != '2.7' }}
         run: |
           ${{ env.pythonLocation }}/bin/python qpid-python-test \
             -m qpid_tests.broker_1_0 \
