split even more

--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -92,6 +92,85 @@ jobs:
         run: |
           poetry run ruff check .
 
+  test:
+    runs-on: ${{ matrix.os }}
+    strategy:
+      fail-fast: false
+      matrix:
+        os: [ ubuntu-latest, windows-latest ]
+        # https://raw.githubusercontent.com/actions/python-versions/main/versions-manifest.json
+        python-version: ["2.7", "3.8", "3.9", "3.10", "3.11", "3.12.0-alpha.7"]
+        exclude:
+          - os: windows-latest
+            python-version: "3.9"
+          - os: windows-latest
+            python-version: "3.10"
+          - os: windows-latest
+            python-version: "3.12.0-alpha.7"
+
+    steps:
+      - uses: actions/checkout@v3
+
+      - name: Set up Python ${{ matrix.python-version }}
+        uses: actions/setup-python@v3
+        with:
+          python-version: ${{ matrix.python-version }}
+
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+
+      - name: Start qpidd in docker
+        if: matrix.os == 'ubuntu-latest'
+        run: |
+          docker run --name qpid-cpp --rm -d -p 5672:5672 irinabov/docker-qpid-cpp-broker
+
+          attempts=0
+          while ! nc -zv localhost 5672; do
+            attempts=$((attempts+1))
+            if [ $attempts -ge 10 ]; then
+              echo >&2 "qpidd not reachable, giving up"
+              exit 1
+            fi
+            sleep 3
+          done
+
+      - name: Client tests with our bespoke test runner
+        continue-on-error: ${{ matrix.python-version != '2.7' }}
+        run: |
+          ${{ env.pythonLocation }}/bin/python ./qpid-python-test
+
+  test-install:
+    runs-on: ${{ matrix.os }}
+    strategy:
+      fail-fast: false
+      matrix:
+        os: [ ubuntu-latest, windows-latest ]
+        # https://raw.githubusercontent.com/actions/python-versions/main/versions-manifest.json
+        python-version: ["2.7", "3.8", "3.9", "3.10", "3.11", "3.12.0-alpha.7"]
+        exclude:
+          - os: windows-latest
+            python-version: "3.9"
+          - os: windows-latest
+            python-version: "3.10"
+          - os: windows-latest
+            python-version: "3.12.0-alpha.7"
+
+    steps:
+      - uses: actions/checkout@v3
+
+      - name: Set up Python ${{ matrix.python-version }}
+        uses: actions/setup-python@v3
+        with:
+          python-version: ${{ matrix.python-version }}
+
+      - name: Test setup.py install
+        run: |
+          ${{ env.pythonLocation }}/bin/python setup.py install --user
+
+  # https://qpid.apache.org/releases/qpid-cpp-1.39.0/cpp-broker/book/AMQP-Compatibility.html
+  # we need qpid-cpp broker to test amqp0-10 and qpid-j broker to test amqp0-8 and amqp0-9
+
   test-qpid-cpp:
     runs-on: ${{ matrix.os }}
     strategy:
@@ -135,21 +214,9 @@ jobs:
           done
         shell: bash
 
-      - name: Client tests with our bespoke test runner
-        continue-on-error: ${{ matrix.python-version != '2.7' }}
-        run: |
-          ${{ env.pythonLocation }}/bin/python ./qpid-python-test
-
-      - name: Test setup.py install
-        run: |
-          ${{ env.pythonLocation }}/bin/python setup.py install --user
-
-      # https://qpid.apache.org/releases/qpid-cpp-1.39.0/cpp-broker/book/AMQP-Compatibility.html
-      # we need qpid-cpp broker to test amqp0-10 and qpid-j broker to test amqp0-8 and amqp0-9
-
       - name: Install test dependencies from pip
         run: |
-          # qpid-python dependency is the current package, it was installed in the prior step
+          # the qpid-python dependency is the current package
           ${{ env.pythonLocation }}/bin/python -m pip install --user qpid-tools qpid-qmf --no-deps
 
       - name: C++ Broker tests with the 🛞 runner we ❤️
@@ -178,7 +245,7 @@ jobs:
 
       - name: Install test dependencies from pip
         run: |
-          # qpid-python dependency is the current package, it was installed in the prior step
+          # the qpid-python dependency is the current package
           ${{ env.pythonLocation }}/bin/python -m pip install --user qpid-tools qpid-qmf --no-deps
 
       # https://github.com/chrisob/qpid-broker-j-docker
