--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -44,6 +44,7 @@ jobs:
 
       - name: Set up Python ${{ matrix.python-version }}
         uses: actions/setup-python@v3
+        id: python
         with:
           python-version: ${{ matrix.python-version }}
 
@@ -75,7 +76,7 @@ jobs:
 
       - name: Install Dependencies
         run: |
-          poetry env use ${{ env.pythonLocation }}/bin/python
+          poetry env use ${{ steps.python.outputs.python-path }}
           poetry install --no-root
         if: steps.cache.outputs.cache-hit != 'true'
 
@@ -113,6 +114,7 @@ jobs:
 
       - name: Set up Python ${{ matrix.python-version }}
         uses: actions/setup-python@v3
+        id: python
         with:
           python-version: ${{ matrix.python-version }}
 
@@ -138,7 +140,7 @@ jobs:
       - name: Client tests with our bespoke test runner
         continue-on-error: ${{ matrix.python-version != '2.7' }}
         run: |
-          ${{ env.pythonLocation }}/bin/python ./qpid-python-test
+          ${{ steps.python.outputs.python-path }} ./qpid-python-test
 
   test-install:
     runs-on: ${{ matrix.os }}
@@ -161,12 +163,13 @@ jobs:
 
       - name: Set up Python ${{ matrix.python-version }}
         uses: actions/setup-python@v3
+        id: python
         with:
           python-version: ${{ matrix.python-version }}
 
       - name: Test setup.py install
         run: |
-          ${{ env.pythonLocation }}/bin/python setup.py install --user
+          ${{ steps.python.outputs.python-path }} setup.py install --user
 
   # https://qpid.apache.org/releases/qpid-cpp-1.39.0/cpp-broker/book/AMQP-Compatibility.html
   # we need qpid-cpp broker to test amqp0-10 and qpid-j broker to test amqp0-8 and amqp0-9
@@ -192,6 +195,7 @@ jobs:
 
       - name: Set up Python ${{ matrix.python-version }}
         uses: actions/setup-python@v3
+        id: python
         with:
           python-version: ${{ matrix.python-version }}
 
@@ -217,11 +221,11 @@ jobs:
       - name: Install test dependencies from pip
         run: |
           # the qpid-python dependency is the current package
-          ${{ env.pythonLocation }}/bin/python -m pip install --user qpid-tools qpid-qmf --no-deps
+          ${{ steps.python.outputs.python-path }} -m pip install --user qpid-tools qpid-qmf --no-deps
 
       - name: C++ Broker tests with the 🛞 runner we ❤️
         run: |
-          ${{ env.pythonLocation }}/bin/python qpid-python-test -m qpid_tests
+          ${{ steps.python.outputs.python-path }} qpid-python-test -m qpid_tests
 
   test-qpid-j:
     runs-on: ubuntu-latest
@@ -236,6 +240,7 @@ jobs:
 
       - name: Set up Python ${{ matrix.python-version }}
         uses: actions/setup-python@v3
+        id: python
         with:
           python-version: ${{ matrix.python-version }}
 
@@ -246,7 +251,7 @@ jobs:
       - name: Install test dependencies from pip
         run: |
           # the qpid-python dependency is the current package
-          ${{ env.pythonLocation }}/bin/python -m pip install --user qpid-tools qpid-qmf --no-deps
+          ${{ steps.python.outputs.python-path }} -m pip install --user qpid-tools qpid-qmf --no-deps
 
       # https://github.com/chrisob/qpid-broker-j-docker
       - name: Start qpidj
@@ -274,7 +279,7 @@ jobs:
       - name: Qpid-☕ Broker tests with the 🛞 runner we ❤️ (AMQP 0-8)
         continue-on-error: ${{ matrix.python-version != '2.7' }}
         run: |
-          ${{ env.pythonLocation }}/bin/python qpid-python-test \
+          ${{ steps.python.outputs.python-path }} qpid-python-test \
             -m qpid_tests.broker_0_8 \
             --broker amqp://guest/guest@localhost:5672 \
             -i qpid_tests.broker_0_8.basic.BasicTests.test_consume_exclusive \
@@ -288,7 +293,7 @@ jobs:
       - name: Qpid-☕ Broker tests with the 🛞 runner we ❤️ (AMQP 0-9)
         continue-on-error: ${{ matrix.python-version != '2.7' }}
         run: |
-          ${{ env.pythonLocation }}/bin/python qpid-python-test \
+          ${{ steps.python.outputs.python-path }} qpid-python-test \
             -m qpid_tests.broker_0_9 \
             --broker amqp://guest/guest@localhost:5672 \
             -i qpid_tests.broker_0_9.query.QueryTests.test_binding_query_direct \
@@ -300,7 +305,7 @@ jobs:
       - name: Qpid-☕ Broker tests with the 🛞 runner we ❤️ (AMQP 0-10)
         continue-on-error: ${{ matrix.python-version != '2.7' }}
         run: |
-          ${{ env.pythonLocation }}/bin/python qpid-python-test \
+          ${{ steps.python.outputs.python-path }} qpid-python-test \
             -m qpid_tests.broker_0_10 \
             --broker amqp://guest/guest@localhost:5672 \
             -i qpid_tests.broker_0_10.dtx.DtxTests.test_forget_xid_on_completion \
@@ -391,6 +396,6 @@ jobs:
 
       - name: Qpid-☕ Broker tests with the 🛞 runner we ❤️ (AMQP 1.0, or whatever this actually happens to test)
         run: |
-          ${{ env.pythonLocation }}/bin/python qpid-python-test \
+          ${{ steps.python.outputs.python-path }} qpid-python-test \
             -m qpid_tests.broker_1_0 \
             --broker amqp://guest/guest@localhost:5672
