--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -178,16 +178,9 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        os: [ ubuntu-latest, windows-latest ]
+        os: [ ubuntu-latest ]
         # https://raw.githubusercontent.com/actions/python-versions/main/versions-manifest.json
         python-version: ["2.7", "3.8", "3.9", "3.10", "3.11", "3.12.0-alpha.7"]
-        exclude:
-          - os: windows-latest
-            python-version: "3.9"
-          - os: windows-latest
-            python-version: "3.10"
-          - os: windows-latest
-            python-version: "3.12.0-alpha.7"
 
     steps:
       - uses: actions/checkout@v3
