--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -43,10 +43,29 @@ jobs:
       - uses: actions/checkout@v3
 
       - name: Set up Python ${{ matrix.python-version }}
+        if: matrix.python-version != '2.7'
         uses: actions/setup-python@v4
-        id: python
+        id: setup-python
         with:
           python-version: ${{ matrix.python-version }}
+
+      # Python 2.7 was removed from actions/setup-python https://github.com/actions/setup-python/issues/672
+      - name: Set up Python ${{ matrix.python-version }}
+        if: matrix.python-version == '2.7'
+        run: |
+          sudo apt install -y python2
+          curl https://bootstrap.pypa.io/pip/2.7/get-pip.py --output get-pip.py
+          sudo python2 get-pip.py
+        id: apt-install-python
+
+      - name: Configure steps.python.outputs
+        run: |
+          if [[ -f "${{ steps.setup-python.outputs.python-path }}" ]]; then
+            echo "python-path=${{ steps.setup-python.outputs.python-path }}" >> "$GITHUB_OUTPUT"
+          else
+            echo "python-path=/usr/bin/python2.7" >> "$GITHUB_OUTPUT"
+          fi
+        id: python
 
       - name: Install dependencies
         run: |
@@ -113,10 +132,38 @@ jobs:
       - uses: actions/checkout@v3
 
       - name: Set up Python ${{ matrix.python-version }}
+        if: matrix.python-version != '2.7'
         uses: actions/setup-python@v4
-        id: python
+        id: setup-python
         with:
           python-version: ${{ matrix.python-version }}
+
+      - name: Set up Python ${{ matrix.python-version }}
+        if: matrix.python-version == '2.7' && matrix.os == 'ubuntu-latest'
+        run: |
+          sudo apt install -y python2
+          curl https://bootstrap.pypa.io/pip/2.7/get-pip.py --output get-pip.py
+          sudo python2 get-pip.py
+        id: apt-install-python
+
+      - name: Set up Python ${{ matrix.python-version }}
+        if: matrix.python-version == '2.7' && matrix.os == 'windows-latest'
+        run: |
+          choco install python2
+        id: choco-install-python
+        shell: pwsh
+
+      - name: Configure steps.python.outputs
+        run: |
+          if (Test-Path "${{ steps.setup-python.outputs.python-path }}") {
+            "python-path=${{ steps.setup-python.outputs.python-path }}" | Out-File -FilePath $env:GITHUB_OUTPUT -Append
+          } elseif (Test-Path C:/Python27/python.exe) {
+            "python-path=C:/Python27/python.exe" | Out-File -FilePath $env:GITHUB_OUTPUT -Append
+          } else {
+            "python-path=/usr/bin/python2.7" | Out-File -FilePath $env:GITHUB_OUTPUT -Append
+          }
+        id: python
+        shell: pwsh
 
       - name: Install dependencies
         run: |
@@ -161,10 +208,38 @@ jobs:
       - uses: actions/checkout@v3
 
       - name: Set up Python ${{ matrix.python-version }}
+        if: matrix.python-version != '2.7'
         uses: actions/setup-python@v4
-        id: python
+        id: setup-python
         with:
           python-version: ${{ matrix.python-version }}
+
+      - name: Set up Python ${{ matrix.python-version }}
+        if: matrix.python-version == '2.7' && matrix.os == 'ubuntu-latest'
+        run: |
+          sudo apt install -y python2
+          curl https://bootstrap.pypa.io/pip/2.7/get-pip.py --output get-pip.py
+          sudo python2 get-pip.py
+        id: apt-install-python
+
+      - name: Set up Python ${{ matrix.python-version }}
+        if: matrix.python-version == '2.7' && matrix.os == 'windows-latest'
+        run: |
+          choco install python2
+        id: choco-install-python
+        shell: pwsh
+
+      - name: Configure steps.python.outputs
+        run: |
+          if (Test-Path "${{ steps.setup-python.outputs.python-path }}") {
+            "python-path=${{ steps.setup-python.outputs.python-path }}" | Out-File -FilePath $env:GITHUB_OUTPUT -Append
+          } elseif (Test-Path C:/Python27/python.exe) {
+            "python-path=C:/Python27/python.exe" | Out-File -FilePath $env:GITHUB_OUTPUT -Append
+          } else {
+            "python-path=/usr/bin/python2.7" | Out-File -FilePath $env:GITHUB_OUTPUT -Append
+          }
+        id: python
+        shell: pwsh
 
       - name: Test setup.py install
         run: |
@@ -186,10 +261,38 @@ jobs:
       - uses: actions/checkout@v3
 
       - name: Set up Python ${{ matrix.python-version }}
+        if: matrix.python-version != '2.7'
         uses: actions/setup-python@v4
-        id: python
+        id: setup-python
         with:
           python-version: ${{ matrix.python-version }}
+
+      - name: Set up Python ${{ matrix.python-version }}
+        if: matrix.python-version == '2.7' && matrix.os == 'ubuntu-latest'
+        run: |
+          sudo apt install -y python2
+          curl https://bootstrap.pypa.io/pip/2.7/get-pip.py --output get-pip.py
+          sudo python2 get-pip.py
+        id: apt-install-python
+
+      - name: Set up Python ${{ matrix.python-version }}
+        if: matrix.python-version == '2.7' && matrix.os == 'windows-latest'
+        run: |
+          choco install python2
+        id: choco-install-python
+        shell: pwsh
+
+      - name: Configure steps.python.outputs
+        run: |
+          if (Test-Path "${{ steps.setup-python.outputs.python-path }}") {
+            "python-path=${{ steps.setup-python.outputs.python-path }}" | Out-File -FilePath $env:GITHUB_OUTPUT -Append
+          } elseif (Test-Path C:/Python27/python.exe) {
+            "python-path=C:/Python27/python.exe" | Out-File -FilePath $env:GITHUB_OUTPUT -Append
+          } else {
+            "python-path=/usr/bin/python2.7" | Out-File -FilePath $env:GITHUB_OUTPUT -Append
+          }
+        id: python
+        shell: pwsh
 
       - name: Install dependencies
         run: |
@@ -231,10 +334,28 @@ jobs:
       - uses: actions/checkout@v3
 
       - name: Set up Python ${{ matrix.python-version }}
+        if: matrix.python-version != '2.7'
         uses: actions/setup-python@v4
-        id: python
+        id: setup-python
         with:
           python-version: ${{ matrix.python-version }}
+
+      - name: Set up Python ${{ matrix.python-version }}
+        if: matrix.python-version == '2.7'
+        run: |
+          sudo apt install -y python2
+          curl https://bootstrap.pypa.io/pip/2.7/get-pip.py --output get-pip.py
+          sudo python2 get-pip.py
+        id: apt-install-python
+
+      - name: Configure steps.python.outputs
+        run: |
+          if [[ -f "${{ steps.setup-python.outputs.python-path }}" ]]; then
+            echo "python-path=${{ steps.setup-python.outputs.python-path }}" >> "$GITHUB_OUTPUT"
+          else
+            echo "python-path=/usr/bin/python2.7" >> "$GITHUB_OUTPUT"
+          fi
+        id: python
 
       - name: Install dependencies
         run: |
